# chessql

./: .gitignore  LICENCE  MANIFEST.in  README  pyproject.toml  setup.cfg  setup.py
about/: CONTACT
chessql/: __init__.py
chessql/core/: __init__.py  basenode.py  constants.py  cql.py  cqltypes.py  elements.py  filters.py  hhdb.py  keywords.py  node.py  options.py  parameters.py  parser.py  pattern.py  piecedesignator.py  querycontainer.py  rays.py  statement.py  structure.py  tokenmap.py
chessql/core/tests/: __init__.py  constants.py  cql.py  piecedesignator.py  test.pgn  test___init__.py  test_assign_logical.py  test_constants.py  test_cql.py  test_cql_strings.py  test_elements.py  test_filter_assign_logical.py  test_filter_captures.py  test_filter_captures_ascii.py  test_filter_captures_utf8.py  test_filter_countmoves.py  test_filter_dash.py  test_filter_dash_ascii.py  test_filter_dash_utf8.py  test_filter_dictionary.py  test_filter_find.py  test_filter_function.py  test_filter_hhdb.py  test_filter_legal.py  test_filter_line.py  test_filter_local.py  test_filter_move.py  test_filter_path.py  test_filter_piecedesignator.py  test_filter_pin.py  test_filter_pseudolegal.py  test_filter_regex.py  test_filter_square.py  test_filter_take_ascii.py  test_filter_take_utf8.py  test_filters.py  test_filters_assign.py  test_filters_atomic_dict.py  test_filters_comparison.py  test_filters_for_bind.py  (+10 more)
chessql/tests/: chessql_command.py  chessql_example.py  chessql_examples_dir.py  chessql_examples_fail_dir.py  chessql_options.py
chessql/tests/old/: chessql_classes.py  chessql_cql_example.py  chessql_cqli_example.py  chessql_cqli_examples_dir.py  chessql_lexer.py  cql_ast_example.py  cql_ast_names.py  cql_example.py  cql_token_lines.py  cql_token_names.py  cql_tokens.py  cqli_example.py  cqli_filter_names.py  cqli_filters.py  cqli_token_lines.py  cqli_token_source.py  cqli_tokens.py
core/: __init__.py  constants.py  node.py  piecedesignator.py  statement.py
core/test/: constants.py  statement.py
pylint/: pylint.conf
