[metadata]
name = chessql
version = 2.0.5.dev0
description = Chess Query Language (cql) parser
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chessql
    chessql.core
