[metadata]
name = chessql
version = 2.1
description = Chess Query Language (cql) parser
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chessql
    chessql.core
install_requires =
    pgn-read==2.2
